[package]
name = "datapool"
version = "0.1.3"
edition = "2021"
description = "Tool to generate a pool of testdata"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/datapool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
rand_distr = "0.4.*"
rand_chacha = "0.3.*"
clap = { version = "3.*", features = ["derive"] }
byteorder = "1.4.*"
