[package]
name = "datapool"
version = "0.1.4"
authors =  ["Ugur Cayoglu <cayoglu@me.com>"]
edition = "2021"
description = "Tool to generate a pool of testdata"
documentation = "https://docs.rs/datapool"
repository = "https://github.com/sqsh-project/datapool"
license = "MIT OR Apache-2.0"
keywords = ["testdata", "datagenerator", "random", "statistics"]
categories = ["development-tools::testing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.*"
rand_distr = "0.4.*"
rand_chacha = "0.3.*"
clap = { version = "3.*", features = ["derive"] }
byteorder = "1.4.*"
